# Luka

./: .gitignore  LICENSE  Pipfile  pyproject.toml
containers/sandbox/: Dockerfile  build.sh
examples/: browser_agent.py  test_browser_gym.py  test_gym.py
luka/: __init__.py  agent.py  basic_browser_agent.py  browser_agent.py  main.py  plan.py  react_browser_agent.py  selenium_sandbox.py  tty_agent.py
luka-frontend/: package-lock.json  package.json  tailwind.config.js
luka/envs/: local_sandbox.py  selenium_sandbox.py
luka/memory/: __init__.py  recall_mem.py  working_mem.py
luka/sandbox/: README.md  __init__.py  docker_sandbox.py  local_sandbox.py  selenium_sandbox.py
luka/state/: __init__.py  plan.py
luka/tools/: selenium_sandbox.py
luka/tools/browser/: README.md  __init__.py  dump_aria.js  envs.py  get_repr.js  observations.py  pure_text.js  retrieve_elements.js  spaces.py  test_sandbox.py
luka/tools/browser/actions/: __init__.py  common.py  functions.py
luka/tools/browser/javascript/: retrieve_elements.js
luka/utils/: __init__.py  data_types.py
src/: selenium_sandbox.py
tests/: test_memory.py  test_memory_recall_mem.py
