[tool.poetry]
name = "luka"
version = "0.1.0"
description = ""
authors = ["Zefu Lu <shawnlu25@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.19.0"
validators = "^0.28.0"
litellm = "^1.35.8"
pexpect = "^4.9.0"
ptyprocess = "^0.7.0"
instructor = "^1.2.3"
whoosh = "^2.7.4"
browsergym = "^0.3.3"
html2text = "^2024.2.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
